kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    type: todo-db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
