kubernetes/ingress-eks.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=Development,Project=ToDoApp

    # 5. Optional: Ensure the Ingress still handles the path rewriting for the backend if needed
    # alb.ingress.kubernetes.io/actions.api: >
    #   {"type":"rewrite","rewriteConfig":{"targetPattern":"/$2"}} 
spec:
  rules:
  - http:
      paths:
      - path: /api/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: backend-service
            port:
              number: 5000
              
      - path: /*
        pathType: ImplementationSpecific 
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
